<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor">

    <TableRow
        android:id="@+id/tablerow2"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:layout_height="40dp"
            android:text="@string/scanRepack"
            android:textSize="14sp"/>
        <ImageView
            android:id="@+id/btn_pickRepack"
            android:layout_weight="0.60"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:src="@drawable/ic_baseline_search_24"
            android:textAllCaps="false"
            />
        <ImageView
            android:id="@+id/gh"
            android:layout_weight="0.70"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:textAllCaps="false"

            />

        <EditText
            android:id="@+id/edtRepackNum"
            android:layout_weight="0.40"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:background="@color/colorWhite"
            android:layout_height="40dp"
            android:hint="Repack #"
            android:maxLength="10"
            android:singleLine="true"
            android:textSize="14sp">
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tablerow8"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="1dp"
        android:layout_below="@+id/tablerow2"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:text="@string/finishedGoods"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:text="@string/txt_cancel" />

        <Button
            android:id="@+id/btn_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/ingredients" />

    </TableRow>


    <LinearLayout
        android:id="@+id/ll_listview"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@+id/tablerow8"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lay_TranslistTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#4f81bd"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="5dp"
                android:text="@string/txt_item"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_qty"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="5dp"
                android:text="@string/txt_umeasur"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:paddingLeft="5dp"
                android:text="@string/txt_Desc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scroll_tranView"
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/ll_listview"
        android:layout_marginTop="2dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/lst_TransItems"
                    android:layout_width="match_parent"
                    android:layout_height="240dp" />
            </LinearLayout>

        </ScrollView>

    </HorizontalScrollView>



    <TableRow
        android:id="@+id/tablerow3"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/scroll_tranView">

        <Button
            android:id="@+id/btn_hold"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/txt_hold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:text="@string/txt_cancel" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:text="@string/txt_save" />

    </TableRow>



</RelativeLayout>